# STREAM-IPC

./: .gitmodules  CMakeLists.txt  Doxyfile  index.dox  package.xml
include/: util.hpp
include/ipc/: common.hpp  ipc-client.hpp  ipc-exceptions.hpp  ipc-server.hpp  sharedMem.hpp  util.hpp
include/ipc/datastructs/: information-datastructs.hpp  misc-datastructs.hpp  namespace-datastructs.hpp  search-datastructs.hpp  sharedMem-datastructs.hpp
include/ipc/datastructs/intern/: intern-datastructs.hpp
ipc/: CMakeLists.txt  package.xml
ipc/include/: common.hpp  util.hpp
ipc/include/ipc/: common.hpp  ipc-client.hpp  ipc-exceptions.hpp  ipc-server.hpp
ipc/include/ipc/datastructs/: misc-datastructs.hpp  namespace-datastructs.hpp  search-datastructs.hpp
ipc/include/msgs/: misc-msgs.hpp  namespace-msgs.hpp  search-msgs.hpp
ipc/src/: common.cpp  ipc-client.cpp  ipc-server.cpp  util.cpp
src/: CMakeLists.txt  ipc-client.cpp  ipc-exceptions.cpp  ipc-server.cpp  sharedMem.cpp  util.cpp
src/ipc/: CMakeLists.txt  ipc-client.cpp  ipc-server.cpp
test/: CMakeLists.txt  package.xml
test/src/: primary.cpp  secondary.cpp
